--- a/style/sass/module/tm.scss
+++ b/style/sass/module/tm.scss
@@ -322,7 +322,6 @@ body{
 
   // 聊天消息
   .msg{
-    overflow: hidden;
     margin: 5px 0;
     .content{
       position: relative;
@@ -330,6 +329,15 @@ body{
       padding: 10px;
       line-height: 21px;
       border-radius: 3px;
+      word-wrap: break-word;
+      word-break: break-all;
+      img{
+        max-width: 100%;
+        cursor: pointer;
+      }
+      .msg-status{
+        position: absolute;
+      }
     }
   }
 
@@ -346,13 +354,16 @@ body{
     .content{
       display: inline-block;
       background-color: #ffeecc;
-
       &:before{
         position: absolute;
         top: 13px;
         left: -16px;
         content: "";
         @include triangle-left(8px,#ffeecc);
+      }
+      .msg-status{
+        bottom: 7px;
+        right: -30px;
       }
     }
   }
@@ -415,7 +426,10 @@ body{
       &:hover{
         border: 1px solid #999;
       }
-
+    }
+    .on{
+      border: 1px solid #999;
+      background-color: #f2f2f2;
     }
     .iconfont{
       margin-right: 5px;
@@ -460,6 +474,11 @@ body{
   float: left;
   width: 330px;
   position: relative;
+  .sys-tip{
+    margin-top: 200px;
+    text-align: center;
+    font-size: 14px;
+  }
 }
 
 
@@ -488,10 +507,11 @@ body{
     }
   }
   .msg-history-bd{
-    height: 525px;
+    height: 555px;
     padding: 20px 0;
     overflow-y: auto;
     overflow-x: hidden;
+    @include transition(all ease .3s);
   }
 
   // 历史消息
@@ -514,8 +534,6 @@ body{
       color: #999;
     }
   }
-
-
   .msg-history-ft{
     position: absolute;
     bottom: 0;
@@ -677,6 +695,35 @@ body{
   font-size: 14px;
   .pop-bd{
     padding: 40px 50px;
+  }
+}
+
+// 查看大图
+.pop-img{
+  position: absolute;
+  background: transparent;
+  .pop-img-close{
+    position: absolute;
+    top: 10px;
+    right: 10px;
+
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    border-radius: 50%;
+    background: rgba(0,0,0,0.6);
+    color: #fff;
+    text-align: center;
+    cursor: pointer;
+    &:hover{
+      background-color: #f42;
+    }
+  }
+  img{
+    width: 100%;
+    height: 100%;
+    border: 10px solid #292929;
+    border-radius: 5px;
   }
 }
 
