--- a/style/sass/module/tm.scss
+++ b/style/sass/module/tm.scss
@@ -325,6 +325,7 @@ body{
     margin: 5px 0;
     .content{
       position: relative;
+      display: inline-block;
       max-width: 300px;
       padding: 10px;
       line-height: 21px;
