--- a/style/css/module/tm.css
+++ b/style/css/module/tm.css
@@ -1574,6 +1574,7 @@ body {
 /* line 326, ../../sass/module/tm.scss */
 .chat-area-bd .msg .content {
   position: relative;
+  display: inline-block;
   max-width: 300px;
   padding: 10px;
   line-height: 21px;
@@ -1581,33 +1582,33 @@ body {
   word-wrap: break-word;
   word-break: break-all;
 }
-/* line 334, ../../sass/module/tm.scss */
+/* line 335, ../../sass/module/tm.scss */
 .chat-area-bd .msg .content img {
   max-width: 100%;
   cursor: pointer;
 }
-/* line 338, ../../sass/module/tm.scss */
+/* line 339, ../../sass/module/tm.scss */
 .chat-area-bd .msg .content .msg-status {
   position: absolute;
 }
-/* line 345, ../../sass/module/tm.scss */
+/* line 346, ../../sass/module/tm.scss */
 .chat-area-bd .msg-in {
   padding-left: 50px;
   float: left;
   text-align: left;
   clear: left;
 }
-/* line 350, ../../sass/module/tm.scss */
+/* line 351, ../../sass/module/tm.scss */
 .chat-area-bd .msg-in .avatar {
   float: left;
   margin-left: -50px;
 }
-/* line 354, ../../sass/module/tm.scss */
+/* line 355, ../../sass/module/tm.scss */
 .chat-area-bd .msg-in .content {
   display: inline-block;
   background-color: #ffeecc;
 }
-/* line 357, ../../sass/module/tm.scss */
+/* line 358, ../../sass/module/tm.scss */
 .chat-area-bd .msg-in .content:before {
   position: absolute;
   top: 13px;
@@ -1623,29 +1624,29 @@ body {
   border-width: 8px;
   border-right: 8px solid #ffeecc;
 }
-/* line 364, ../../sass/module/tm.scss */
+/* line 365, ../../sass/module/tm.scss */
 .chat-area-bd .msg-in .content .msg-status {
   bottom: 7px;
   right: -30px;
 }
-/* line 372, ../../sass/module/tm.scss */
+/* line 373, ../../sass/module/tm.scss */
 .chat-area-bd .msg-out {
   padding-right: 50px;
   float: right;
   text-align: right;
   clear: right;
 }
-/* line 377, ../../sass/module/tm.scss */
+/* line 378, ../../sass/module/tm.scss */
 .chat-area-bd .msg-out .avatar {
   float: right;
   margin-right: -50px;
 }
-/* line 381, ../../sass/module/tm.scss */
+/* line 382, ../../sass/module/tm.scss */
 .chat-area-bd .msg-out .content {
   background-color: #ddeeff;
   text-align: left;
 }
-/* line 384, ../../sass/module/tm.scss */
+/* line 385, ../../sass/module/tm.scss */
 .chat-area-bd .msg-out .content:after {
   position: absolute;
   top: 13px;
@@ -1661,28 +1662,28 @@ body {
   border-width: 8px;
   border-left: 8px solid #ddeeff;
 }
-/* line 392, ../../sass/module/tm.scss */
+/* line 393, ../../sass/module/tm.scss */
 .chat-area-bd .msg-out .msg-failed {
   margin-top: 5px;
   font-size: 12px;
   text-align: left;
 }
-/* line 396, ../../sass/module/tm.scss */
+/* line 397, ../../sass/module/tm.scss */
 .chat-area-bd .msg-out .msg-failed .iconfont-information {
   color: #f7411a;
   vertical-align: -1px;
 }
 
-/* line 409, ../../sass/module/tm.scss */
+/* line 410, ../../sass/module/tm.scss */
 .chat-edit {
   position: relative;
   height: 165px;
 }
-/* line 414, ../../sass/module/tm.scss */
+/* line 415, ../../sass/module/tm.scss */
 .chat-edit .toolbar {
   padding: 4px 17px;
 }
-/* line 416, ../../sass/module/tm.scss */
+/* line 417, ../../sass/module/tm.scss */
 .chat-edit .toolbar .toolbar-item {
   display: inline-block;
   width: 24px;
@@ -1694,20 +1695,20 @@ body {
   text-align: center;
   cursor: pointer;
 }
-/* line 426, ../../sass/module/tm.scss */
+/* line 427, ../../sass/module/tm.scss */
 .chat-edit .toolbar .toolbar-item:hover {
   border: 1px solid #999999;
 }
-/* line 430, ../../sass/module/tm.scss */
+/* line 431, ../../sass/module/tm.scss */
 .chat-edit .toolbar .on {
   border: 1px solid #999999;
   background-color: #f2f2f2;
 }
-/* line 434, ../../sass/module/tm.scss */
+/* line 435, ../../sass/module/tm.scss */
 .chat-edit .toolbar .iconfont {
   margin-right: 5px;
 }
-/* line 440, ../../sass/module/tm.scss */
+/* line 441, ../../sass/module/tm.scss */
 .chat-edit .edit-box {
   height: 80px;
   overflow-y: auto;
@@ -1719,13 +1720,13 @@ body {
   white-space: pre-wrap;
   word-break: normal;
 }
-/* line 454, ../../sass/module/tm.scss */
+/* line 455, ../../sass/module/tm.scss */
 .chat-edit .action {
   position: absolute;
   right: 20px;
   bottom: 20px;
 }
-/* line 458, ../../sass/module/tm.scss */
+/* line 459, ../../sass/module/tm.scss */
 .chat-edit .action .desc {
   color: #999;
   font-size: 12px;
@@ -1733,20 +1734,20 @@ body {
   margin-right: 7px;
 }
 
-/* line 473, ../../sass/module/tm.scss */
+/* line 474, ../../sass/module/tm.scss */
 .sidebar {
   float: left;
   width: 330px;
   position: relative;
 }
-/* line 477, ../../sass/module/tm.scss */
+/* line 478, ../../sass/module/tm.scss */
 .sidebar .sys-tip {
   margin-top: 200px;
   text-align: center;
   font-size: 14px;
 }
 
-/* line 486, ../../sass/module/tm.scss */
+/* line 487, ../../sass/module/tm.scss */
 .msg-history {
   position: absolute;
   width: 330px;
@@ -1757,7 +1758,7 @@ body {
   -o-transition: all ease 0.5s;
   transition: all ease 0.5s;
 }
-/* line 492, ../../sass/module/tm.scss */
+/* line 493, ../../sass/module/tm.scss */
 .msg-history .msg-history-hd {
   height: 50px;
   line-height: 50px;
@@ -1776,19 +1777,19 @@ body {
 .msg-history .msg-history-hd:after {
   clear: both;
 }
-/* line 498, ../../sass/module/tm.scss */
+/* line 499, ../../sass/module/tm.scss */
 .msg-history .msg-history-hd h2 {
   display: inline-block;
   font-size: 14px;
   font-weight: normal;
 }
-/* line 503, ../../sass/module/tm.scss */
+/* line 504, ../../sass/module/tm.scss */
 .msg-history .msg-history-hd .iconfont-close {
   float: right;
   font-size: 16px;
   cursor: pointer;
 }
-/* line 509, ../../sass/module/tm.scss */
+/* line 510, ../../sass/module/tm.scss */
 .msg-history .msg-history-bd {
   height: 555px;
   padding: 20px 0;
@@ -1799,37 +1800,37 @@ body {
   -o-transition: all ease 0.3s;
   transition: all ease 0.3s;
 }
-/* line 518, ../../sass/module/tm.scss */
+/* line 519, ../../sass/module/tm.scss */
 .msg-history .record {
   margin-bottom: 10px;
 }
-/* line 520, ../../sass/module/tm.scss */
+/* line 521, ../../sass/module/tm.scss */
 .msg-history .record .record-time {
   margin: 0 30px;
   font-weight: bold;
   line-height: 24px;
   border-bottom: 1px solid #e6e6e6;
 }
-/* line 527, ../../sass/module/tm.scss */
+/* line 528, ../../sass/module/tm.scss */
 .msg-history .record .record-lst li {
   padding: 7px 30px;
 }
-/* line 529, ../../sass/module/tm.scss */
+/* line 530, ../../sass/module/tm.scss */
 .msg-history .record .record-lst li:hover {
   background-color: #f2f2f2;
 }
-/* line 533, ../../sass/module/tm.scss */
+/* line 534, ../../sass/module/tm.scss */
 .msg-history .record .record-txt-hd {
   color: #999;
 }
-/* line 537, ../../sass/module/tm.scss */
+/* line 538, ../../sass/module/tm.scss */
 .msg-history .msg-history-ft {
   position: absolute;
   bottom: 0;
   left: 0;
   width: 100%;
 }
-/* line 545, ../../sass/module/tm.scss */
+/* line 546, ../../sass/module/tm.scss */
 .msg-history .filter-area {
   padding: 5px 15px 0;
   line-height: 24px;
@@ -1839,7 +1840,7 @@ body {
   -o-transition: all ease 0.3s;
   transition: all ease 0.3s;
 }
-/* line 551, ../../sass/module/tm.scss */
+/* line 552, ../../sass/module/tm.scss */
 .msg-history .filter-area select,
 .msg-history .filter-area input {
   width: 80px;
@@ -1849,11 +1850,11 @@ body {
   border: 1px solid #e6e6e6;
   font-size: 12px;
 }
-/* line 559, ../../sass/module/tm.scss */
+/* line 560, ../../sass/module/tm.scss */
 .msg-history .filter-area select {
   margin-right: 15px;
 }
-/* line 563, ../../sass/module/tm.scss */
+/* line 564, ../../sass/module/tm.scss */
 .msg-history .pager {
   position: relative;
   z-index: 9;
@@ -1872,7 +1873,7 @@ body {
 .msg-history .pager:after {
   clear: both;
 }
-/* line 569, ../../sass/module/tm.scss */
+/* line 570, ../../sass/module/tm.scss */
 .msg-history .pager .search {
   float: left;
   width: 56px;
@@ -1883,20 +1884,20 @@ body {
   border: 1px solid #f2f2f2;
   border-radius: 2px;
 }
-/* line 578, ../../sass/module/tm.scss */
+/* line 579, ../../sass/module/tm.scss */
 .msg-history .pager .search .iconfont-search {
   margin-right: 5px;
   font-size: 14px;
 }
-/* line 582, ../../sass/module/tm.scss */
+/* line 583, ../../sass/module/tm.scss */
 .msg-history .pager .search:hover {
   border: 1px solid #999999;
 }
-/* line 586, ../../sass/module/tm.scss */
+/* line 587, ../../sass/module/tm.scss */
 .msg-history .pager .pager-nav {
   float: right;
 }
-/* line 588, ../../sass/module/tm.scss */
+/* line 589, ../../sass/module/tm.scss */
 .msg-history .pager .pager-nav input {
   height: 20px;
   line-height: 20px;
@@ -1905,7 +1906,7 @@ body {
   border: 1px solid #e6e6e6;
   font-size: 12px;
 }
-/* line 596, ../../sass/module/tm.scss */
+/* line 597, ../../sass/module/tm.scss */
 .msg-history .pager .pager-nav .iconfont {
   display: inline-block;
   padding: 0 3px;
@@ -1915,44 +1916,44 @@ body {
   cursor: pointer;
   font-size: 14px;
 }
-/* line 604, ../../sass/module/tm.scss */
+/* line 605, ../../sass/module/tm.scss */
 .msg-history .pager .pager-nav .iconfont:hover {
   border: 1px solid #999999;
 }
 
-/* line 621, ../../sass/module/tm.scss */
+/* line 622, ../../sass/module/tm.scss */
 .pop-service {
   min-height: 430px;
   font-size: 14px;
 }
-/* line 624, ../../sass/module/tm.scss */
+/* line 625, ../../sass/module/tm.scss */
 .pop-service .txtarea {
   width: 100%;
   height: 80px;
 }
-/* line 628, ../../sass/module/tm.scss */
+/* line 629, ../../sass/module/tm.scss */
 .pop-service .faq-switch {
   margin-bottom: 10px;
 }
-/* line 630, ../../sass/module/tm.scss */
+/* line 631, ../../sass/module/tm.scss */
 .pop-service .faq-switch label {
   margin-right: 30px;
 }
-/* line 635, ../../sass/module/tm.scss */
+/* line 636, ../../sass/module/tm.scss */
 .pop-service .faq .faq-hd {
   padding: 10px 0;
 }
-/* line 637, ../../sass/module/tm.scss */
+/* line 638, ../../sass/module/tm.scss */
 .pop-service .faq .faq-hd .after-txt {
   margin-left: 20px;
   font-size: 12px;
   color: #999999;
 }
-/* line 643, ../../sass/module/tm.scss */
+/* line 644, ../../sass/module/tm.scss */
 .pop-service .faq .faq-bd {
   overflow: hidden;
 }
-/* line 645, ../../sass/module/tm.scss */
+/* line 646, ../../sass/module/tm.scss */
 .pop-service .faq .faq-bd .faq-lst {
   float: left;
   width: 370px;
@@ -1960,65 +1961,65 @@ body {
   margin-right: 10px;
   border: 1px solid #e6e6e6;
 }
-/* line 651, ../../sass/module/tm.scss */
+/* line 652, ../../sass/module/tm.scss */
 .pop-service .faq .faq-bd .faq-lst li {
   padding: 0 15px;
   height: 36px;
   line-height: 36px;
   cursor: pointer;
 }
-/* line 658, ../../sass/module/tm.scss */
+/* line 659, ../../sass/module/tm.scss */
 .pop-service .faq .faq-bd .faq-lst li:hover,
 .pop-service .faq .faq-bd .faq-lst .on {
   background-color: #f2f2f2;
 }
-/* line 663, ../../sass/module/tm.scss */
+/* line 664, ../../sass/module/tm.scss */
 .pop-service .faq .faq-bd .faq-action {
   float: left;
 }
-/* line 665, ../../sass/module/tm.scss */
+/* line 666, ../../sass/module/tm.scss */
 .pop-service .faq .faq-bd .faq-action li {
   margin-bottom: 10px;
 }
-/* line 668, ../../sass/module/tm.scss */
+/* line 669, ../../sass/module/tm.scss */
 .pop-service .faq .faq-bd .faq-action .btn {
   width: 100px;
 }
-/* line 676, ../../sass/module/tm.scss */
+/* line 677, ../../sass/module/tm.scss */
 .pop-service .faq-set {
   padding: 40px 50px;
 }
-/* line 678, ../../sass/module/tm.scss */
+/* line 679, ../../sass/module/tm.scss */
 .pop-service .faq-set .field-tit-ta {
   line-height: 40px;
 }
-/* line 681, ../../sass/module/tm.scss */
+/* line 682, ../../sass/module/tm.scss */
 .pop-service .faq-set .txt {
   width: 100%;
   height: 40px;
   line-height: 40px;
 }
-/* line 686, ../../sass/module/tm.scss */
+/* line 687, ../../sass/module/tm.scss */
 .pop-service .faq-set .txtarea {
   height: 150px;
 }
 
-/* line 693, ../../sass/module/tm.scss */
+/* line 694, ../../sass/module/tm.scss */
 .pop-tip {
   width: 430px;
   font-size: 14px;
 }
-/* line 696, ../../sass/module/tm.scss */
+/* line 697, ../../sass/module/tm.scss */
 .pop-tip .pop-bd {
   padding: 40px 50px;
 }
 
-/* line 702, ../../sass/module/tm.scss */
+/* line 703, ../../sass/module/tm.scss */
 .pop-img {
   position: absolute;
   background: transparent;
 }
-/* line 705, ../../sass/module/tm.scss */
+/* line 706, ../../sass/module/tm.scss */
 .pop-img .pop-img-close {
   position: absolute;
   top: 10px;
@@ -2032,11 +2033,11 @@ body {
   text-align: center;
   cursor: pointer;
 }
-/* line 718, ../../sass/module/tm.scss */
+/* line 719, ../../sass/module/tm.scss */
 .pop-img .pop-img-close:hover {
   background-color: #f42;
 }
-/* line 722, ../../sass/module/tm.scss */
+/* line 723, ../../sass/module/tm.scss */
 .pop-img img {
   width: 100%;
   height: 100%;
@@ -2044,14 +2045,14 @@ body {
   border-radius: 5px;
 }
 
-/* line 739, ../../sass/module/tm.scss */
+/* line 740, ../../sass/module/tm.scss */
 .iconfont-set {
   -webkit-transition: all ease 1s;
   -moz-transition: all ease 1s;
   -o-transition: all ease 1s;
   transition: all ease 1s;
 }
-/* line 741, ../../sass/module/tm.scss */
+/* line 742, ../../sass/module/tm.scss */
 .iconfont-set:hover {
   -webkit-transform: rotate(180deg);
   -moz-transform: rotate(180deg);
@@ -2060,14 +2061,14 @@ body {
   transform: rotate(180deg);
 }
 
-/* line 745, ../../sass/module/tm.scss */
+/* line 746, ../../sass/module/tm.scss */
 .iconfont-close {
   -webkit-transition: all ease 0.5s;
   -moz-transition: all ease 0.5s;
   -o-transition: all ease 0.5s;
   transition: all ease 0.5s;
 }
-/* line 747, ../../sass/module/tm.scss */
+/* line 748, ../../sass/module/tm.scss */
 .iconfont-close:hover {
   -webkit-transform: rotate(180deg);
   -moz-transform: rotate(180deg);
@@ -2076,7 +2077,7 @@ body {
   transform: rotate(180deg);
 }
 
-/* line 754, ../../sass/module/tm.scss */
+/* line 755, ../../sass/module/tm.scss */
 .fadeInL {
   opacity: 1;
   -webkit-transform: translateX(0px);
@@ -2086,7 +2087,7 @@ body {
   transform: translateX(0px);
 }
 
-/* line 758, ../../sass/module/tm.scss */
+/* line 759, ../../sass/module/tm.scss */
 .fadeOutL {
   opacity: 0;
   -webkit-transform: translateX(-330px);
@@ -2096,7 +2097,7 @@ body {
   transform: translateX(-330px);
 }
 
-/* line 764, ../../sass/module/tm.scss */
+/* line 765, ../../sass/module/tm.scss */
 .fadeInB {
   opacity: 1;
   -webkit-transform: translateY(0px);
@@ -2106,7 +2107,7 @@ body {
   transform: translateY(0px);
 }
 
-/* line 768, ../../sass/module/tm.scss */
+/* line 769, ../../sass/module/tm.scss */
 .fadeOutB {
   opacity: 0;
   -webkit-transform: translateY(30px);
