--- a/style/sass/base/fonts.scss
+++ b/style/sass/base/fonts.scss
@@ -39,3 +39,7 @@
 .iconfont-arrow-left:before { content: "\e786"; }
 
 .iconfont-arrow-right:before { content: "\e787"; }
+
+.iconfont-feedback:before { content: "\e6fa"; }
+
+.iconfont-success:before { content: "\e72d"; }
