--- a/style/sass/module/tm.scss
+++ b/style/sass/module/tm.scss
@@ -640,7 +640,7 @@ body{
     .faq-hd{
       padding: 10px 0;
       .after-txt{
-        margin-left: 20px;
+        margin-left: 10px;
         font-size: 12px;
         color: $grayLight;
       }
@@ -673,6 +673,9 @@ body{
         .btn{
           width: 100px;
         }
+        .btn-delete{
+          margin-top: 24px;
+        }
       }
       
 
@@ -690,6 +693,12 @@ body{
     }
     .txtarea{
       height: 150px;
+    }
+    .ta-note{
+      margin-top: 5px;
+      font-size: 12px;
+      text-align: right;
+      color: $grayLight;
     }
   }
 }
