--- a/style/css/module/tm.css
+++ b/style/css/module/tm.css
@@ -1135,6 +1135,7 @@ body {
 }
 
 .search-bar {
+  position: relative;
   width: 100%;
   height: 32px;
   line-height: 32px;
@@ -1158,6 +1159,29 @@ body {
   border: none;
   background-color: #3387dd;
   color: #fff;
+}
+.search-bar .search-lst {
+  position: absolute;
+  top: 32px;
+  left: 0;
+  width: 100%;
+  box-shadow: 1px 2px 5px 0 #333333;
+}
+.search-bar .search-lst li {
+  padding: 10px 0 10px 60px;
+  background-color: #4498ee;
+  color: #fff;
+  cursor: pointer;
+}
+.search-bar .search-lst li:hover {
+  background-color: #5ba6f0;
+}
+.search-bar .search-lst li .avatar {
+  margin-top: -3px;
+}
+.search-bar .search-lst li .nickname {
+  margin-left: 5px;
+  font-weight: normal;
 }
 
 .nav-view {
