--- a/style/sass/module/tm.scss
+++ b/style/sass/module/tm.scss
@@ -126,6 +126,7 @@ body{
 }
 // 左侧面板-搜索
 .search-bar{
+  position: relative;
   width: 100%;
   height: 32px;
   line-height: 32px;
@@ -148,6 +149,30 @@ body{
     border: none;
     background-color: #3387dd;
     color: #fff;
+  }
+
+  .search-lst{
+    position: absolute;
+    top: 32px;
+    left: 0;
+    width: 100%;
+    box-shadow: 1px 2px 5px 0 #333;
+    li{
+      padding: 10px 0 10px 60px;
+      background-color: #4498ee;
+      color:#fff;
+      cursor: pointer;
+      &:hover{
+        background-color: #5ba6f0;
+      }
+      .avatar{
+        margin-top: -3px;
+      }
+      .nickname{
+        margin-left: 5px;
+        font-weight: normal;
+      }
+    }
   }
 }
 
