--- a/style/sass/module/tm.scss
+++ b/style/sass/module/tm.scss
@@ -155,6 +155,7 @@ body{
     position: absolute;
     top: 32px;
     left: 0;
+    z-index: 19;
     width: 100%;
     box-shadow: 1px 2px 5px 0 #333;
     li{
@@ -179,8 +180,12 @@ body{
 
 // 左侧面板-聊天对象
 .nav-view{
+  position: relative;
   height: 528px;
   overflow-y: scroll;
+  .alpha{
+    z-index: 9;
+  }
   .nav-view-tip{
     margin-top: 90px;
     text-align: center;
