--- a/style/sass/base/fonts.scss
+++ b/style/sass/base/fonts.scss
@@ -43,3 +43,7 @@
 .iconfont-feedback:before { content: "\e6fa"; }
 
 .iconfont-success:before { content: "\e72d"; }
+
+.iconfont-delete:before { content: "\e6f2"; }
+
+.iconfont-refresh:before { content: "\e71e"; }
